2008-02-25  Dan Winship  <danw@gnome.org>

	* configure.in: 2.3.4

	* NEWS: Update

2008-02-25  Dan Winship  <danw@gnome.org>

	* docs/reference/Makefile.am (DOC_MODULE): rename from libsoup to
	libsoup-2.4
	(TARGET_DIR): don't need to override this now

	* docs/reference/libsoup-2.4.types:
	* docs/reference/libsoup-2.4-docs.txt:
	* docs/reference/libsoup-2.4-overrides.txt:
	* docs/reference/libsoup-2.4-sections.txt: Rename these from
	unversioned, to match DOC_MODULE

	Fixes doc installation to work with devhelp again. #518384, Mart
	Raudsepp.

2008-02-25  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-address.h:
	* libsoup/soup-auth-domain.h:
	* libsoup/soup-auth.h:
	* libsoup/soup-message.h:
	* libsoup/soup-server.h:
	* libsoup/soup-session-async.h:
	* libsoup/soup-session-sync.h:
	* libsoup/soup-session.h:
	* libsoup/soup-socket.h:
	* libsoup/soup-types.h:
	* libsoup/soup-uri.h:
	use an underscore for struct definitions. Fixes bug #518317.

2008-02-20  Sebastian Dröge  <slomo@circular-chaos.org>

	* libsoup.pc.in: Add gobject-2.0 and gio-2.0 to Requires.
	Move libxml-2.0 and the SSL dependency to Requires.private
	as no header is including them. Fixes bug #517631.

2008-02-11  Dan Winship  <danw@gnome.org>

	* configure.in: post-release bump to 2.3.3

2008-02-11  Dan Winship  <danw@gnome.org>

	* configure.in: 2.3.2
	(SOUP_CURRENT): bump for API changes

	* NEWS: update

2008-02-09  Dan Winship  <danw@gnome.org>

	* Misc gtk-doc fix-ups

2008-02-09  Dan Winship  <danw@gnome.org>

	* libsoup/soup-misc.h: remove prototype for
	soup_signal_connect_once, which is only used by soup-connection
	now, and will go away once that code is rewritten.

	* libsoup/soup-connection.c: prototype it here now (the definition
	is still in soup-misc.c)

2008-02-09  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager-ntlm.c: mark the DES magic number
	arrays const

	* libsoup/soup-date.c (months, days): add an extra "const" to each